syntax = "proto3";

package auth_service;

service AuthService {
    rpc check_token(CheckTokenRequest) returns (CheckTokenResponse) {}
}

message CheckTokenRequest {
    string user_id = 1;
    string access_token = 2;
}

message CheckTokenResponse {
    string status = 1;
    string role = 2;
}
